--- a/index.html
+++ b/index.html
@@ -3,48 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f9f9f9;
-            color: #333;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 1em 0;
-        }
-        main {
-            margin: 2em;
-        }
-        footer {
-            background-color: #ddd;
-            padding: 1em 0;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-    </style>
+    <title>My Simple Index Page</title>
 </head>
 <body>
-
     <header>
         <h1>Welcome to My Website</h1>
     </header>
-
     <main>
-        <p>This is a simple index page built with HTML and CSS.</p>
-        <a href="about.html">Learn more about us</a>
+        <p>This is a simple index page created using HTML.</p>
+        <p>You can add more content here, such as links, images, or further sections.</p>
     </main>
-
     <footer>
         <p>&copy; 2025 My Website. All rights reserved.</p>
     </footer>
-
 </body>
 </html>
-
